--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "git-stateless-push",
+    "main": "lib/index.js",
     "version": "0.0.0",
     "dependencies": {
         "q": "1.0.1",
         "lodash": "2.4.1",
-        "tmp": "0.0.23"
+        "tmp": "0.0.23",
+        "wrench": "1.5.8"
     },
     "devDependencies": {
         "express": "4.1.2"
-        },
+    },
     "homepage": "https://github.com/SamyPesse/git-stateless-push",
     "author": "Samy Pessé <samypesse@gmail.com>",
     "license": "Apache 2",
