--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "git-stateless-push",
+    "name": "git-push-server",
+    "description": "Make it easy to build an HTTP stateless git-push server",
     "main": "lib/index.js",
     "version": "0.0.0",
     "dependencies": {
