--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "q": "1.0.1",
         "lodash": "2.4.1",
         "tmp": "0.0.23",
-        "wrench": "1.5.8"
+        "wrench": "1.5.8",
+        "crc": "0.2.1"
     },
     "devDependencies": {
         "express": "4.1.2"
